--- a/_layout/head.html
+++ b/_layout/head.html
@@ -29,13 +29,20 @@
               <li class="menu-list-item "><a href="/exercise1/task2" class="menu-list-link">Uppgift hö1</a>
               <li class="menu-list-item "><a href="/exercise1/task3" class="menu-list-link">Uppgift 2.3</a>
               <li class="menu-list-item "><a href="/exercise1/task4" class="menu-list-link">Uppgift 2.23</a>
-              <li class="menu-list-item "><a href="/exercise1/task5" class="menu-list-link">Uppgift hö3</a>
             </ul>
-<!--           <li class="menu-list-item {{ispage menu2/*}}active{{end}}"><a href="/menu2/" class="menu-list-link {{ispage menu2}}active{{end}}">Menu 2</a>
-          <li class="menu-list-item {{ispage menu3/*}}active{{end}}"><a href="/menu3/" class="menu-list-link {{ispage menu3}}active{{end}}">Menu 3</a>
+          <li class="menu-list-item {{ispage exercise2/*}}active{{end}}"><a href="/exercise2/task1" class="menu-list-link {{ispage exercise2/*}}active{{end}}">Räkneövning 2</a>
             <ul class="menu-list-child-list ">
-              <li class="menu-list-item "><a href="#" class="menu-list-link">Submenu</a>
-            </ul> -->
+              <li class="menu-list-item "><a href="/exercise2/task1" class="menu-list-link">Uppgift 4.2</a>
+              <li class="menu-list-item "><a href="/exercise2/task2" class="menu-list-link">Uppgift 4.4</a>
+              <li class="menu-list-item "><a href="/exercise2/task3" class="menu-list-link">Uppgift 4.18a</a>
+            </ul>
+          <li class="menu-list-item {{ispage exercise3/*}}active{{end}}"><a href="/exercise3/task1" class="menu-list-link {{ispage exercise3/*}}active{{end}}">Räkneövning 3</a>
+            <ul class="menu-list-child-list ">
+              <li class="menu-list-item "><a href="/exercise3/task1" class="menu-list-link">Uppgift 8.12</a>
+              <li class="menu-list-item "><a href="/exercise3/task2" class="menu-list-link">Uppgift 8.24</a>
+              <li class="menu-list-item "><a href="/exercise3/task3" class="menu-list-link">Uppgift 8.14</a>
+              <!-- <li class="menu-list-item "><a href="/exercise3/task4" class="menu-list-link">Uppgift 8.15</a> -->
+            </ul>
         </ul>
       </div>
 <!--       <div class="footer">
