--- a/_layout/head.html
+++ b/_layout/head.html
@@ -41,7 +41,7 @@
               <li class="menu-list-item "><a href="/exercise3/task1" class="menu-list-link">Uppgift 8.12</a>
               <li class="menu-list-item "><a href="/exercise3/task2" class="menu-list-link">Uppgift 8.24</a>
               <li class="menu-list-item "><a href="/exercise3/task3" class="menu-list-link">Uppgift 8.14</a>
-              <!-- <li class="menu-list-item "><a href="/exercise3/task4" class="menu-list-link">Uppgift 8.15</a> -->
+              <li class="menu-list-item "><a href="/exercise3/task4" class="menu-list-link">Uppgift 8.15</a>
             </ul>
         </ul>
       </div>
