--- a/_layout/head.html
+++ b/_layout/head.html
@@ -46,7 +46,7 @@
           <li class="menu-list-item {{ispage exercise4/*}}active{{end}}"><a href="/exercise4/task1" class="menu-list-link {{ispage exercise4/*}}active{{end}}">Räkneövning 4</a>
             <ul class="menu-list-child-list ">
               <li class="menu-list-item "><a href="/exercise4/task1" class="menu-list-link">Uppgift 8.4</a>
-              <!-- <li class="menu-list-item "><a href="/exercise4/task2" class="menu-list-link">Uppgift 12.4</a> -->
+              <li class="menu-list-item "><a href="/exercise4/task2" class="menu-list-link">Uppgift 12.4</a>
               <!-- <li class="menu-list-item "><a href="/exercise4/task3" class="menu-list-link">Uppgift 12.5</a> -->
               <!-- <li class="menu-list-item "><a href="/exercise4/task4" class="menu-list-link">Uppgift 9.3</a> -->
             </ul>
