--- a/_layout/head.html
+++ b/_layout/head.html
@@ -47,7 +47,7 @@
             <ul class="menu-list-child-list ">
               <li class="menu-list-item "><a href="/exercise4/task1" class="menu-list-link">Uppgift 8.4</a>
               <li class="menu-list-item "><a href="/exercise4/task2" class="menu-list-link">Uppgift 12.4</a>
-              <!-- <li class="menu-list-item "><a href="/exercise4/task3" class="menu-list-link">Uppgift 12.5</a> -->
+              <li class="menu-list-item "><a href="/exercise4/task3" class="menu-list-link">Uppgift 12.5</a>
               <!-- <li class="menu-list-item "><a href="/exercise4/task4" class="menu-list-link">Uppgift 9.3</a> -->
             </ul>
         </ul>
