--- a/_layout/head.html
+++ b/_layout/head.html
@@ -54,7 +54,7 @@
             <ul class="menu-list-child-list ">
               <li class="menu-list-item "><a href="/exercise5/task1" class="menu-list-link">Uppgift 6.3</a>
               <li class="menu-list-item "><a href="/exercise5/task2" class="menu-list-link">Uppgift 6.8</a>
-              <!-- <li class="menu-list-item "><a href="/exercise5/task3" class="menu-list-link">Uppgift 5.17</a> -->
+              <li class="menu-list-item "><a href="/exercise5/task3" class="menu-list-link">Uppgift 5.17</a>
               <!-- <li class="menu-list-item "><a href="/exercise5/task4" class="menu-list-link">Uppgift 5.21</a> -->
               <!-- <li class="menu-list-item "><a href="/exercise5/task5" class="menu-list-link">Uppgift 5.26</a> -->
             </ul>
