--- a/_layout/head.html
+++ b/_layout/head.html
@@ -58,6 +58,12 @@
               <li class="menu-list-item "><a href="/exercise5/task4" class="menu-list-link">Uppgift 5.21</a>
               <!-- <li class="menu-list-item "><a href="/exercise5/task5" class="menu-list-link">Uppgift 5.26</a> -->
             </ul>
+          <li class="menu-list-item {{ispage exercise6/*}}active{{end}}"><a href="/exercise6/task1" class="menu-list-link {{ispage exercise6/*}}active{{end}}">Räkneövning 6</a>
+            <ul class="menu-list-child-list ">
+              <li class="menu-list-item "><a href="/exercise6/task1" class="menu-list-link">Uppgift 6.10</a>
+              <!-- <li class="menu-list-item "><a href="/exercise6/task2" class="menu-list-link">Uppgift 7.6</a> -->
+              <!-- <li class="menu-list-item "><a href="/exercise6/task3" class="menu-list-link">Uppgift 7.3</a> -->
+            </ul>
         </ul>
       </div>
 <!--       <div class="footer">
