--- a/_layout/head.html
+++ b/_layout/head.html
@@ -62,7 +62,7 @@
             <ul class="menu-list-child-list ">
               <li class="menu-list-item "><a href="/exercise6/task1" class="menu-list-link">Uppgift 6.10</a>
               <li class="menu-list-item "><a href="/exercise6/task2" class="menu-list-link">Uppgift 7.6</a>
-              <!-- <li class="menu-list-item "><a href="/exercise6/task3" class="menu-list-link">Uppgift 7.3</a> -->
+              <li class="menu-list-item "><a href="/exercise6/task3" class="menu-list-link">Uppgift 7.3</a>
             </ul>
         </ul>
       </div>
